fixed footer covering bottom of text

--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,9 @@ body
     background-position: center;
     background-attachment: fixed;
     margin: 2% auto;
+    padding-bottom: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 footer
